--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="styles.css" type="text/css" />
   </head>
   <body>
+    <div class="main-container">
+      <div class="container">
+        <p class="text">THIS IS AN OVERLAY</p>
+      </div>
+      <div class="test">TESTING</div>
+      <img src="images/watch-300px.png" class="image-test" />
+    </div>
+    <div id="pixi-container"></div>
     <script type="module" src="main.js"></script>
   </body>
 </html>
