Animate spriteheet in pixi canvas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="container">
         <p class="text">THIS IS AN OVERLAY</p>
       </div>
-      <div class="test">TESTING</div>
+      <!-- <div class="test"></div> -->
       <img src="images/watch-300px.png" class="image-test" />
     </div>
     <div id="pixi-container"></div>
